--- a/examples/basic_usage.ipynb
+++ b/examples/basic_usage.ipynb
@@ -49,7 +49,7 @@
    "outputs": [],
    "source": [
     "density_estimation = pkde.DensityEstimation(data, grid=True, device=\"cpu\")\n",
-    "density_estimation.estimate_density(\"parallelEstimator\")"
+    "density_estimation.estimate_density(\"gradepro\")"
    ]
   },
   {
@@ -116,7 +116,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.11"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
